tests/negative/test_data_nested.orb
data Foo {
    val:i32
    foo:Foo
};

fnc main() () {}